--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
-<h1>
-  {{title}}
-</h1>
+  <md-sidenav-layout [class.m2app-dark]="isDarkTheme">
+	  <md-toolbar color="primary">
+
+	   Johngalt's
+		<label>&nbsp;&nbsp;&nbsp;</label>
+	    <span class="app-toolbar-filler"> 	   
+		    <a [routerLink]="['/']" md-button>
+	  			<md-icon >home</md-icon>
+			</a>
+			<a [routerLink]="['/movie']" md-button>Movies</a>
+			<a [routerLink]="['/game']" md-button>Games</a>
+	    </span>
+	 	 
+	    <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+	  </md-toolbar>
+
+	    <div class="app-content">
+			<router-outlet></router-outlet>
+ 		 </div>
+  </md-sidenav-layout>
